--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -57,3 +57,19 @@ jobs:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: excelia-indus-dev-tp1
           heroku_email: christelzerbib@gmail.com
+  post:
+    needs: deploy
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      #Runs post deploy tests
+      - name: Post
+        run: |
+          response=$(curl -s -o /dev/null -w "%{http_code}" https://excelia-indus-dev-tp1.herokuapp.com/)
+          case "$response" in
+            200) printf "Received: HTTP $response ==> 200" ;;
+            *) exit 1 ;;
+          esac
+          
+
+
