--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,9 +6,9 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main ]
+    branches: [ main, dev ]
   pull_request:
-    branches: [ main ]
+    branches: [ main, dev ]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -51,11 +51,19 @@ jobs:
     steps:
       - name: Chekout repository
         uses: actions/checkout@v2
-      - name: Deploy to Heroku
+      - name: Deploy main to Heroku
+        if: ${{ github.ref == 'refs/heads/main' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
           heroku_app_name: excelia-indus-dev-tp1
+          heroku_email: christelzerbib@gmail.com
+      - name: Deploy main to Heroku
+        if: ${{ github.ref == 'refs/heads/dev' }}
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: excelia-indus-dev-tp1-dev
           heroku_email: christelzerbib@gmail.com
   post:
     needs: deploy
