--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Chekout repository
         uses: actions/checkout@v2
       - name: Deploy main to Heroku
-        if: ${{ github.ref == 'refs/heads/main' }}
+        if: ${{ github.event.pull_request.merged }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
