--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           flake8 main.py
       - name: ECHO REF
         run: |
-          echo ${{ github.ref_name }}
+          echo ${{ github.base_ref }}
   deploy:
     needs: test
     runs-on: ubuntu-latest
@@ -55,7 +55,7 @@ jobs:
       - name: Chekout repository
         uses: actions/checkout@v2
       - name: Deploy main to Heroku
-        if: ${{ github.event_name != 'pull_request' }}
+        if: ${{ github.base_ref == 'main' }}
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
           heroku_api_key: ${{secrets.HEROKU_API_KEY}}
